parser.out
Grammar:

Rule 0     S' -> prog
Rule 1     prog -> listeInstructions
Rule 2     listeInstructions -> instruction listeInstructions
Rule 3     listeInstructions -> instruction
Rule 4     instruction -> IDENTIFIANT = LIRE ( ) ;
Rule 5     instruction -> ecrire
Rule 6     ecrire -> ECRIRE ( expr ) ;
Rule 7     expr -> FAUX
Rule 8     expr -> VRAI
Rule 9     expr -> NON expr  [precedence=right, level=2]
Rule 10    expr -> expr OU expr  [precedence=left, level=1]
Rule 11    expr -> expr ET expr  [precedence=left, level=1]
Rule 12    expr -> expr DIFFERENT expr  [precedence=left, level=3]
Rule 13    expr -> expr EGAL expr  [precedence=left, level=3]
Rule 14    expr -> expr SUPERIEUR_OU_EGAL expr  [precedence=left, level=3]
Rule 15    expr -> expr INFERIEUR_OU_EGAL expr  [precedence=left, level=3]
Rule 16    expr -> expr SUPERIEUR expr  [precedence=left, level=3]
Rule 17    expr -> expr INFERIEUR expr  [precedence=left, level=3]
Rule 18    expr -> ENTIER
Rule 19    expr -> ( expr )  [precedence=left, level=6]
Rule 20    expr -> expr % expr  [precedence=left, level=5]
Rule 21    expr -> expr / expr  [precedence=left, level=5]
Rule 22    expr -> expr * expr  [precedence=left, level=5]
Rule 23    expr -> expr - expr  [precedence=left, level=4]
Rule 24    expr -> expr + expr  [precedence=left, level=4]
Rule 25    declaration -> TYPE_ENTIER IDENTIFIANT ;

Unused terminals:

    TANT_QUE
    RETOURNER
    TYPE_BOOLEEN
    SI
    SINON

Terminals, with rules where they appear:

%                    : 20
(                    : 4 6 19
)                    : 4 6 19
*                    : 22
+                    : 24
-                    : 23
/                    : 21
;                    : 4 6 25
=                    : 4
DIFFERENT            : 12
ECRIRE               : 6
EGAL                 : 13
ENTIER               : 18
ET                   : 11
FAUX                 : 7
IDENTIFIANT          : 4 25
INFERIEUR            : 17
INFERIEUR_OU_EGAL    : 15
LIRE                 : 4
NON                  : 9
OU                   : 10
RETOURNER            : 
SI                   : 
SINON                : 
SUPERIEUR            : 16
SUPERIEUR_OU_EGAL    : 14
TANT_QUE             : 
TYPE_BOOLEEN         : 
TYPE_ENTIER          : 25
VRAI                 : 8
error                : 

Nonterminals, with rules where they appear:

declaration          : 
ecrire               : 5
expr                 : 6 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 19 20 20 21 21 22 22 23 23 24 24
instruction          : 2 3
listeInstructions    : 1 2
prog                 : 0


state 0

    (0) S' -> . prog
    (1) prog -> . listeInstructions
    (2) listeInstructions -> . instruction listeInstructions
    (3) listeInstructions -> . instruction
    (4) instruction -> . IDENTIFIANT = LIRE ( ) ;
    (5) instruction -> . ecrire
    (6) ecrire -> . ECRIRE ( expr ) ;
    IDENTIFIANT     shift and go to state 4
    ECRIRE          shift and go to state 6

    prog                           shift and go to state 1
    listeInstructions              shift and go to state 2
    instruction                    shift and go to state 3
    ecrire                         shift and go to state 5

state 1

    (0) S' -> prog .


state 2

    (1) prog -> listeInstructions .
    $end            reduce using rule 1 (prog -> listeInstructions .)


state 3

    (2) listeInstructions -> instruction . listeInstructions
    (3) listeInstructions -> instruction .
    (2) listeInstructions -> . instruction listeInstructions
    (3) listeInstructions -> . instruction
    (4) instruction -> . IDENTIFIANT = LIRE ( ) ;
    (5) instruction -> . ecrire
    (6) ecrire -> . ECRIRE ( expr ) ;
    $end            reduce using rule 3 (listeInstructions -> instruction .)
    IDENTIFIANT     shift and go to state 4
    ECRIRE          shift and go to state 6

    instruction                    shift and go to state 3
    listeInstructions              shift and go to state 7
    ecrire                         shift and go to state 5

state 4

    (4) instruction -> IDENTIFIANT . = LIRE ( ) ;
    =               shift and go to state 8


state 5

    (5) instruction -> ecrire .
    IDENTIFIANT     reduce using rule 5 (instruction -> ecrire .)
    ECRIRE          reduce using rule 5 (instruction -> ecrire .)
    $end            reduce using rule 5 (instruction -> ecrire .)


state 6

    (6) ecrire -> ECRIRE . ( expr ) ;
    (               shift and go to state 9


state 7

    (2) listeInstructions -> instruction listeInstructions .
    $end            reduce using rule 2 (listeInstructions -> instruction listeInstructions .)


state 8

    (4) instruction -> IDENTIFIANT = . LIRE ( ) ;
    LIRE            shift and go to state 10


state 9

    (6) ecrire -> ECRIRE ( . expr ) ;
    (7) expr -> . FAUX
    (8) expr -> . VRAI
    (9) expr -> . NON expr
    (10) expr -> . expr OU expr
    (11) expr -> . expr ET expr
    (12) expr -> . expr DIFFERENT expr
    (13) expr -> . expr EGAL expr
    (14) expr -> . expr SUPERIEUR_OU_EGAL expr
    (15) expr -> . expr INFERIEUR_OU_EGAL expr
    (16) expr -> . expr SUPERIEUR expr
    (17) expr -> . expr INFERIEUR expr
    (18) expr -> . ENTIER
    (19) expr -> . ( expr )
    (20) expr -> . expr % expr
    (21) expr -> . expr / expr
    (22) expr -> . expr * expr
    (23) expr -> . expr - expr
    (24) expr -> . expr + expr
    FAUX            shift and go to state 13
    VRAI            shift and go to state 14
    NON             shift and go to state 15
    ENTIER          shift and go to state 16
    (               shift and go to state 11

    expr                           shift and go to state 12

state 10

    (4) instruction -> IDENTIFIANT = LIRE . ( ) ;
    (               shift and go to state 17


state 11

    (19) expr -> ( . expr )
    (7) expr -> . FAUX
    (8) expr -> . VRAI
    (9) expr -> . NON expr
    (10) expr -> . expr OU expr
    (11) expr -> . expr ET expr
    (12) expr -> . expr DIFFERENT expr
    (13) expr -> . expr EGAL expr
    (14) expr -> . expr SUPERIEUR_OU_EGAL expr
    (15) expr -> . expr INFERIEUR_OU_EGAL expr
    (16) expr -> . expr SUPERIEUR expr
    (17) expr -> . expr INFERIEUR expr
    (18) expr -> . ENTIER
    (19) expr -> . ( expr )
    (20) expr -> . expr % expr
    (21) expr -> . expr / expr
    (22) expr -> . expr * expr
    (23) expr -> . expr - expr
    (24) expr -> . expr + expr
    FAUX            shift and go to state 13
    VRAI            shift and go to state 14
    NON             shift and go to state 15
    ENTIER          shift and go to state 16
    (               shift and go to state 11

    expr                           shift and go to state 18

state 12

    (6) ecrire -> ECRIRE ( expr . ) ;
    (10) expr -> expr . OU expr
    (11) expr -> expr . ET expr
    (12) expr -> expr . DIFFERENT expr
    (13) expr -> expr . EGAL expr
    (14) expr -> expr . SUPERIEUR_OU_EGAL expr
    (15) expr -> expr . INFERIEUR_OU_EGAL expr
    (16) expr -> expr . SUPERIEUR expr
    (17) expr -> expr . INFERIEUR expr
    (20) expr -> expr . % expr
    (21) expr -> expr . / expr
    (22) expr -> expr . * expr
    (23) expr -> expr . - expr
    (24) expr -> expr . + expr
    )               shift and go to state 19
    OU              shift and go to state 20
    ET              shift and go to state 21
    DIFFERENT       shift and go to state 22
    EGAL            shift and go to state 23
    SUPERIEUR_OU_EGAL shift and go to state 24
    INFERIEUR_OU_EGAL shift and go to state 25
    SUPERIEUR       shift and go to state 26
    INFERIEUR       shift and go to state 27
    %               shift and go to state 28
    /               shift and go to state 29
    *               shift and go to state 30
    -               shift and go to state 31
    +               shift and go to state 32


state 13

    (7) expr -> FAUX .
    )               reduce using rule 7 (expr -> FAUX .)
    OU              reduce using rule 7 (expr -> FAUX .)
    ET              reduce using rule 7 (expr -> FAUX .)
    DIFFERENT       reduce using rule 7 (expr -> FAUX .)
    EGAL            reduce using rule 7 (expr -> FAUX .)
    SUPERIEUR_OU_EGAL reduce using rule 7 (expr -> FAUX .)
    INFERIEUR_OU_EGAL reduce using rule 7 (expr -> FAUX .)
    SUPERIEUR       reduce using rule 7 (expr -> FAUX .)
    INFERIEUR       reduce using rule 7 (expr -> FAUX .)
    %               reduce using rule 7 (expr -> FAUX .)
    /               reduce using rule 7 (expr -> FAUX .)
    *               reduce using rule 7 (expr -> FAUX .)
    -               reduce using rule 7 (expr -> FAUX .)
    +               reduce using rule 7 (expr -> FAUX .)


state 14

    (8) expr -> VRAI .
    )               reduce using rule 8 (expr -> VRAI .)
    OU              reduce using rule 8 (expr -> VRAI .)
    ET              reduce using rule 8 (expr -> VRAI .)
    DIFFERENT       reduce using rule 8 (expr -> VRAI .)
    EGAL            reduce using rule 8 (expr -> VRAI .)
    SUPERIEUR_OU_EGAL reduce using rule 8 (expr -> VRAI .)
    INFERIEUR_OU_EGAL reduce using rule 8 (expr -> VRAI .)
    SUPERIEUR       reduce using rule 8 (expr -> VRAI .)
    INFERIEUR       reduce using rule 8 (expr -> VRAI .)
    %               reduce using rule 8 (expr -> VRAI .)
    /               reduce using rule 8 (expr -> VRAI .)
    *               reduce using rule 8 (expr -> VRAI .)
    -               reduce using rule 8 (expr -> VRAI .)
    +               reduce using rule 8 (expr -> VRAI .)


state 15

    (9) expr -> NON . expr
    (7) expr -> . FAUX
    (8) expr -> . VRAI
    (9) expr -> . NON expr
    (10) expr -> . expr OU expr
    (11) expr -> . expr ET expr
    (12) expr -> . expr DIFFERENT expr
    (13) expr -> . expr EGAL expr
    (14) expr -> . expr SUPERIEUR_OU_EGAL expr
    (15) expr -> . expr INFERIEUR_OU_EGAL expr
    (16) expr -> . expr SUPERIEUR expr
    (17) expr -> . expr INFERIEUR expr
    (18) expr -> . ENTIER
    (19) expr -> . ( expr )
    (20) expr -> . expr % expr
    (21) expr -> . expr / expr
    (22) expr -> . expr * expr
    (23) expr -> . expr - expr
    (24) expr -> . expr + expr
    FAUX            shift and go to state 13
    VRAI            shift and go to state 14
    NON             shift and go to state 15
    ENTIER          shift and go to state 16
    (               shift and go to state 11

    expr                           shift and go to state 33

state 16

    (18) expr -> ENTIER .
    )               reduce using rule 18 (expr -> ENTIER .)
    OU              reduce using rule 18 (expr -> ENTIER .)
    ET              reduce using rule 18 (expr -> ENTIER .)
    DIFFERENT       reduce using rule 18 (expr -> ENTIER .)
    EGAL            reduce using rule 18 (expr -> ENTIER .)
    SUPERIEUR_OU_EGAL reduce using rule 18 (expr -> ENTIER .)
    INFERIEUR_OU_EGAL reduce using rule 18 (expr -> ENTIER .)
    SUPERIEUR       reduce using rule 18 (expr -> ENTIER .)
    INFERIEUR       reduce using rule 18 (expr -> ENTIER .)
    %               reduce using rule 18 (expr -> ENTIER .)
    /               reduce using rule 18 (expr -> ENTIER .)
    *               reduce using rule 18 (expr -> ENTIER .)
    -               reduce using rule 18 (expr -> ENTIER .)
    +               reduce using rule 18 (expr -> ENTIER .)


state 17

    (4) instruction -> IDENTIFIANT = LIRE ( . ) ;
    )               shift and go to state 34


state 18

    (19) expr -> ( expr . )
    (10) expr -> expr . OU expr
    (11) expr -> expr . ET expr
    (12) expr -> expr . DIFFERENT expr
    (13) expr -> expr . EGAL expr
    (14) expr -> expr . SUPERIEUR_OU_EGAL expr
    (15) expr -> expr . INFERIEUR_OU_EGAL expr
    (16) expr -> expr . SUPERIEUR expr
    (17) expr -> expr . INFERIEUR expr
    (20) expr -> expr . % expr
    (21) expr -> expr . / expr
    (22) expr -> expr . * expr
    (23) expr -> expr . - expr
    (24) expr -> expr . + expr
    )               shift and go to state 35
    OU              shift and go to state 20
    ET              shift and go to state 21
    DIFFERENT       shift and go to state 22
    EGAL            shift and go to state 23
    SUPERIEUR_OU_EGAL shift and go to state 24
    INFERIEUR_OU_EGAL shift and go to state 25
    SUPERIEUR       shift and go to state 26
    INFERIEUR       shift and go to state 27
    %               shift and go to state 28
    /               shift and go to state 29
    *               shift and go to state 30
    -               shift and go to state 31
    +               shift and go to state 32


state 19

    (6) ecrire -> ECRIRE ( expr ) . ;
    ;               shift and go to state 36


state 20

    (10) expr -> expr OU . expr
    (7) expr -> . FAUX
    (8) expr -> . VRAI
    (9) expr -> . NON expr
    (10) expr -> . expr OU expr
    (11) expr -> . expr ET expr
    (12) expr -> . expr DIFFERENT expr
    (13) expr -> . expr EGAL expr
    (14) expr -> . expr SUPERIEUR_OU_EGAL expr
    (15) expr -> . expr INFERIEUR_OU_EGAL expr
    (16) expr -> . expr SUPERIEUR expr
    (17) expr -> . expr INFERIEUR expr
    (18) expr -> . ENTIER
    (19) expr -> . ( expr )
    (20) expr -> . expr % expr
    (21) expr -> . expr / expr
    (22) expr -> . expr * expr
    (23) expr -> . expr - expr
    (24) expr -> . expr + expr
    FAUX            shift and go to state 13
    VRAI            shift and go to state 14
    NON             shift and go to state 15
    ENTIER          shift and go to state 16
    (               shift and go to state 11

    expr                           shift and go to state 37

state 21

    (11) expr -> expr ET . expr
    (7) expr -> . FAUX
    (8) expr -> . VRAI
    (9) expr -> . NON expr
    (10) expr -> . expr OU expr
    (11) expr -> . expr ET expr
    (12) expr -> . expr DIFFERENT expr
    (13) expr -> . expr EGAL expr
    (14) expr -> . expr SUPERIEUR_OU_EGAL expr
    (15) expr -> . expr INFERIEUR_OU_EGAL expr
    (16) expr -> . expr SUPERIEUR expr
    (17) expr -> . expr INFERIEUR expr
    (18) expr -> . ENTIER
    (19) expr -> . ( expr )
    (20) expr -> . expr % expr
    (21) expr -> . expr / expr
    (22) expr -> . expr * expr
    (23) expr -> . expr - expr
    (24) expr -> . expr + expr
    FAUX            shift and go to state 13
    VRAI            shift and go to state 14
    NON             shift and go to state 15
    ENTIER          shift and go to state 16
    (               shift and go to state 11

    expr                           shift and go to state 38

state 22

    (12) expr -> expr DIFFERENT . expr
    (7) expr -> . FAUX
    (8) expr -> . VRAI
    (9) expr -> . NON expr
    (10) expr -> . expr OU expr
    (11) expr -> . expr ET expr
    (12) expr -> . expr DIFFERENT expr
    (13) expr -> . expr EGAL expr
    (14) expr -> . expr SUPERIEUR_OU_EGAL expr
    (15) expr -> . expr INFERIEUR_OU_EGAL expr
    (16) expr -> . expr SUPERIEUR expr
    (17) expr -> . expr INFERIEUR expr
    (18) expr -> . ENTIER
    (19) expr -> . ( expr )
    (20) expr -> . expr % expr
    (21) expr -> . expr / expr
    (22) expr -> . expr * expr
    (23) expr -> . expr - expr
    (24) expr -> . expr + expr
    FAUX            shift and go to state 13
    VRAI            shift and go to state 14
    NON             shift and go to state 15
    ENTIER          shift and go to state 16
    (               shift and go to state 11

    expr                           shift and go to state 39

state 23

    (13) expr -> expr EGAL . expr
    (7) expr -> . FAUX
    (8) expr -> . VRAI
    (9) expr -> . NON expr
    (10) expr -> . expr OU expr
    (11) expr -> . expr ET expr
    (12) expr -> . expr DIFFERENT expr
    (13) expr -> . expr EGAL expr
    (14) expr -> . expr SUPERIEUR_OU_EGAL expr
    (15) expr -> . expr INFERIEUR_OU_EGAL expr
    (16) expr -> . expr SUPERIEUR expr
    (17) expr -> . expr INFERIEUR expr
    (18) expr -> . ENTIER
    (19) expr -> . ( expr )
    (20) expr -> . expr % expr
    (21) expr -> . expr / expr
    (22) expr -> . expr * expr
    (23) expr -> . expr - expr
    (24) expr -> . expr + expr
    FAUX            shift and go to state 13
    VRAI            shift and go to state 14
    NON             shift and go to state 15
    ENTIER          shift and go to state 16
    (               shift and go to state 11

    expr                           shift and go to state 40

state 24

    (14) expr -> expr SUPERIEUR_OU_EGAL . expr
    (7) expr -> . FAUX
    (8) expr -> . VRAI
    (9) expr -> . NON expr
    (10) expr -> . expr OU expr
    (11) expr -> . expr ET expr
    (12) expr -> . expr DIFFERENT expr
    (13) expr -> . expr EGAL expr
    (14) expr -> . expr SUPERIEUR_OU_EGAL expr
    (15) expr -> . expr INFERIEUR_OU_EGAL expr
    (16) expr -> . expr SUPERIEUR expr
    (17) expr -> . expr INFERIEUR expr
    (18) expr -> . ENTIER
    (19) expr -> . ( expr )
    (20) expr -> . expr % expr
    (21) expr -> . expr / expr
    (22) expr -> . expr * expr
    (23) expr -> . expr - expr
    (24) expr -> . expr + expr
    FAUX            shift and go to state 13
    VRAI            shift and go to state 14
    NON             shift and go to state 15
    ENTIER          shift and go to state 16
    (               shift and go to state 11

    expr                           shift and go to state 41

state 25

    (15) expr -> expr INFERIEUR_OU_EGAL . expr
    (7) expr -> . FAUX
    (8) expr -> . VRAI
    (9) expr -> . NON expr
    (10) expr -> . expr OU expr
    (11) expr -> . expr ET expr
    (12) expr -> . expr DIFFERENT expr
    (13) expr -> . expr EGAL expr
    (14) expr -> . expr SUPERIEUR_OU_EGAL expr
    (15) expr -> . expr INFERIEUR_OU_EGAL expr
    (16) expr -> . expr SUPERIEUR expr
    (17) expr -> . expr INFERIEUR expr
    (18) expr -> . ENTIER
    (19) expr -> . ( expr )
    (20) expr -> . expr % expr
    (21) expr -> . expr / expr
    (22) expr -> . expr * expr
    (23) expr -> . expr - expr
    (24) expr -> . expr + expr
    FAUX            shift and go to state 13
    VRAI            shift and go to state 14
    NON             shift and go to state 15
    ENTIER          shift and go to state 16
    (               shift and go to state 11

    expr                           shift and go to state 42

state 26

    (16) expr -> expr SUPERIEUR . expr
    (7) expr -> . FAUX
    (8) expr -> . VRAI
    (9) expr -> . NON expr
    (10) expr -> . expr OU expr
    (11) expr -> . expr ET expr
    (12) expr -> . expr DIFFERENT expr
    (13) expr -> . expr EGAL expr
    (14) expr -> . expr SUPERIEUR_OU_EGAL expr
    (15) expr -> . expr INFERIEUR_OU_EGAL expr
    (16) expr -> . expr SUPERIEUR expr
    (17) expr -> . expr INFERIEUR expr
    (18) expr -> . ENTIER
    (19) expr -> . ( expr )
    (20) expr -> . expr % expr
    (21) expr -> . expr / expr
    (22) expr -> . expr * expr
    (23) expr -> . expr - expr
    (24) expr -> . expr + expr
    FAUX            shift and go to state 13
    VRAI            shift and go to state 14
    NON             shift and go to state 15
    ENTIER          shift and go to state 16
    (               shift and go to state 11

    expr                           shift and go to state 43

state 27

    (17) expr -> expr INFERIEUR . expr
    (7) expr -> . FAUX
    (8) expr -> . VRAI
    (9) expr -> . NON expr
    (10) expr -> . expr OU expr
    (11) expr -> . expr ET expr
    (12) expr -> . expr DIFFERENT expr
    (13) expr -> . expr EGAL expr
    (14) expr -> . expr SUPERIEUR_OU_EGAL expr
    (15) expr -> . expr INFERIEUR_OU_EGAL expr
    (16) expr -> . expr SUPERIEUR expr
    (17) expr -> . expr INFERIEUR expr
    (18) expr -> . ENTIER
    (19) expr -> . ( expr )
    (20) expr -> . expr % expr
    (21) expr -> . expr / expr
    (22) expr -> . expr * expr
    (23) expr -> . expr - expr
    (24) expr -> . expr + expr
    FAUX            shift and go to state 13
    VRAI            shift and go to state 14
    NON             shift and go to state 15
    ENTIER          shift and go to state 16
    (               shift and go to state 11

    expr                           shift and go to state 44

state 28

    (20) expr -> expr % . expr
    (7) expr -> . FAUX
    (8) expr -> . VRAI
    (9) expr -> . NON expr
    (10) expr -> . expr OU expr
    (11) expr -> . expr ET expr
    (12) expr -> . expr DIFFERENT expr
    (13) expr -> . expr EGAL expr
    (14) expr -> . expr SUPERIEUR_OU_EGAL expr
    (15) expr -> . expr INFERIEUR_OU_EGAL expr
    (16) expr -> . expr SUPERIEUR expr
    (17) expr -> . expr INFERIEUR expr
    (18) expr -> . ENTIER
    (19) expr -> . ( expr )
    (20) expr -> . expr % expr
    (21) expr -> . expr / expr
    (22) expr -> . expr * expr
    (23) expr -> . expr - expr
    (24) expr -> . expr + expr
    FAUX            shift and go to state 13
    VRAI            shift and go to state 14
    NON             shift and go to state 15
    ENTIER          shift and go to state 16
    (               shift and go to state 11

    expr                           shift and go to state 45

state 29

    (21) expr -> expr / . expr
    (7) expr -> . FAUX
    (8) expr -> . VRAI
    (9) expr -> . NON expr
    (10) expr -> . expr OU expr
    (11) expr -> . expr ET expr
    (12) expr -> . expr DIFFERENT expr
    (13) expr -> . expr EGAL expr
    (14) expr -> . expr SUPERIEUR_OU_EGAL expr
    (15) expr -> . expr INFERIEUR_OU_EGAL expr
    (16) expr -> . expr SUPERIEUR expr
    (17) expr -> . expr INFERIEUR expr
    (18) expr -> . ENTIER
    (19) expr -> . ( expr )
    (20) expr -> . expr % expr
    (21) expr -> . expr / expr
    (22) expr -> . expr * expr
    (23) expr -> . expr - expr
    (24) expr -> . expr + expr
    FAUX            shift and go to state 13
    VRAI            shift and go to state 14
    NON             shift and go to state 15
    ENTIER          shift and go to state 16
    (               shift and go to state 11

    expr                           shift and go to state 46

state 30

    (22) expr -> expr * . expr
    (7) expr -> . FAUX
    (8) expr -> . VRAI
    (9) expr -> . NON expr
    (10) expr -> . expr OU expr
    (11) expr -> . expr ET expr
    (12) expr -> . expr DIFFERENT expr
    (13) expr -> . expr EGAL expr
    (14) expr -> . expr SUPERIEUR_OU_EGAL expr
    (15) expr -> . expr INFERIEUR_OU_EGAL expr
    (16) expr -> . expr SUPERIEUR expr
    (17) expr -> . expr INFERIEUR expr
    (18) expr -> . ENTIER
    (19) expr -> . ( expr )
    (20) expr -> . expr % expr
    (21) expr -> . expr / expr
    (22) expr -> . expr * expr
    (23) expr -> . expr - expr
    (24) expr -> . expr + expr
    FAUX            shift and go to state 13
    VRAI            shift and go to state 14
    NON             shift and go to state 15
    ENTIER          shift and go to state 16
    (               shift and go to state 11

    expr                           shift and go to state 47

state 31

    (23) expr -> expr - . expr
    (7) expr -> . FAUX
    (8) expr -> . VRAI
    (9) expr -> . NON expr
    (10) expr -> . expr OU expr
    (11) expr -> . expr ET expr
    (12) expr -> . expr DIFFERENT expr
    (13) expr -> . expr EGAL expr
    (14) expr -> . expr SUPERIEUR_OU_EGAL expr
    (15) expr -> . expr INFERIEUR_OU_EGAL expr
    (16) expr -> . expr SUPERIEUR expr
    (17) expr -> . expr INFERIEUR expr
    (18) expr -> . ENTIER
    (19) expr -> . ( expr )
    (20) expr -> . expr % expr
    (21) expr -> . expr / expr
    (22) expr -> . expr * expr
    (23) expr -> . expr - expr
    (24) expr -> . expr + expr
    FAUX            shift and go to state 13
    VRAI            shift and go to state 14
    NON             shift and go to state 15
    ENTIER          shift and go to state 16
    (               shift and go to state 11

    expr                           shift and go to state 48

state 32

    (24) expr -> expr + . expr
    (7) expr -> . FAUX
    (8) expr -> . VRAI
    (9) expr -> . NON expr
    (10) expr -> . expr OU expr
    (11) expr -> . expr ET expr
    (12) expr -> . expr DIFFERENT expr
    (13) expr -> . expr EGAL expr
    (14) expr -> . expr SUPERIEUR_OU_EGAL expr
    (15) expr -> . expr INFERIEUR_OU_EGAL expr
    (16) expr -> . expr SUPERIEUR expr
    (17) expr -> . expr INFERIEUR expr
    (18) expr -> . ENTIER
    (19) expr -> . ( expr )
    (20) expr -> . expr % expr
    (21) expr -> . expr / expr
    (22) expr -> . expr * expr
    (23) expr -> . expr - expr
    (24) expr -> . expr + expr
    FAUX            shift and go to state 13
    VRAI            shift and go to state 14
    NON             shift and go to state 15
    ENTIER          shift and go to state 16
    (               shift and go to state 11

    expr                           shift and go to state 49

state 33

    (9) expr -> NON expr .
    (10) expr -> expr . OU expr
    (11) expr -> expr . ET expr
    (12) expr -> expr . DIFFERENT expr
    (13) expr -> expr . EGAL expr
    (14) expr -> expr . SUPERIEUR_OU_EGAL expr
    (15) expr -> expr . INFERIEUR_OU_EGAL expr
    (16) expr -> expr . SUPERIEUR expr
    (17) expr -> expr . INFERIEUR expr
    (20) expr -> expr . % expr
    (21) expr -> expr . / expr
    (22) expr -> expr . * expr
    (23) expr -> expr . - expr
    (24) expr -> expr . + expr
    )               reduce using rule 9 (expr -> NON expr .)
    OU              reduce using rule 9 (expr -> NON expr .)
    ET              reduce using rule 9 (expr -> NON expr .)
    DIFFERENT       shift and go to state 22
    EGAL            shift and go to state 23
    SUPERIEUR_OU_EGAL shift and go to state 24
    INFERIEUR_OU_EGAL shift and go to state 25
    SUPERIEUR       shift and go to state 26
    INFERIEUR       shift and go to state 27
    %               shift and go to state 28
    /               shift and go to state 29
    *               shift and go to state 30
    -               shift and go to state 31
    +               shift and go to state 32


state 34

    (4) instruction -> IDENTIFIANT = LIRE ( ) . ;
    ;               shift and go to state 50


state 35

    (19) expr -> ( expr ) .
    )               reduce using rule 19 (expr -> ( expr ) .)
    OU              reduce using rule 19 (expr -> ( expr ) .)
    ET              reduce using rule 19 (expr -> ( expr ) .)
    DIFFERENT       reduce using rule 19 (expr -> ( expr ) .)
    EGAL            reduce using rule 19 (expr -> ( expr ) .)
    SUPERIEUR_OU_EGAL reduce using rule 19 (expr -> ( expr ) .)
    INFERIEUR_OU_EGAL reduce using rule 19 (expr -> ( expr ) .)
    SUPERIEUR       reduce using rule 19 (expr -> ( expr ) .)
    INFERIEUR       reduce using rule 19 (expr -> ( expr ) .)
    %               reduce using rule 19 (expr -> ( expr ) .)
    /               reduce using rule 19 (expr -> ( expr ) .)
    *               reduce using rule 19 (expr -> ( expr ) .)
    -               reduce using rule 19 (expr -> ( expr ) .)
    +               reduce using rule 19 (expr -> ( expr ) .)


state 36

    (6) ecrire -> ECRIRE ( expr ) ; .
    IDENTIFIANT     reduce using rule 6 (ecrire -> ECRIRE ( expr ) ; .)
    ECRIRE          reduce using rule 6 (ecrire -> ECRIRE ( expr ) ; .)
    $end            reduce using rule 6 (ecrire -> ECRIRE ( expr ) ; .)


state 37

    (10) expr -> expr OU expr .
    (10) expr -> expr . OU expr
    (11) expr -> expr . ET expr
    (12) expr -> expr . DIFFERENT expr
    (13) expr -> expr . EGAL expr
    (14) expr -> expr . SUPERIEUR_OU_EGAL expr
    (15) expr -> expr . INFERIEUR_OU_EGAL expr
    (16) expr -> expr . SUPERIEUR expr
    (17) expr -> expr . INFERIEUR expr
    (20) expr -> expr . % expr
    (21) expr -> expr . / expr
    (22) expr -> expr . * expr
    (23) expr -> expr . - expr
    (24) expr -> expr . + expr
    )               reduce using rule 10 (expr -> expr OU expr .)
    OU              reduce using rule 10 (expr -> expr OU expr .)
    ET              reduce using rule 10 (expr -> expr OU expr .)
    DIFFERENT       shift and go to state 22
    EGAL            shift and go to state 23
    SUPERIEUR_OU_EGAL shift and go to state 24
    INFERIEUR_OU_EGAL shift and go to state 25
    SUPERIEUR       shift and go to state 26
    INFERIEUR       shift and go to state 27
    %               shift and go to state 28
    /               shift and go to state 29
    *               shift and go to state 30
    -               shift and go to state 31
    +               shift and go to state 32


state 38

    (11) expr -> expr ET expr .
    (10) expr -> expr . OU expr
    (11) expr -> expr . ET expr
    (12) expr -> expr . DIFFERENT expr
    (13) expr -> expr . EGAL expr
    (14) expr -> expr . SUPERIEUR_OU_EGAL expr
    (15) expr -> expr . INFERIEUR_OU_EGAL expr
    (16) expr -> expr . SUPERIEUR expr
    (17) expr -> expr . INFERIEUR expr
    (20) expr -> expr . % expr
    (21) expr -> expr . / expr
    (22) expr -> expr . * expr
    (23) expr -> expr . - expr
    (24) expr -> expr . + expr
    )               reduce using rule 11 (expr -> expr ET expr .)
    OU              reduce using rule 11 (expr -> expr ET expr .)
    ET              reduce using rule 11 (expr -> expr ET expr .)
    DIFFERENT       shift and go to state 22
    EGAL            shift and go to state 23
    SUPERIEUR_OU_EGAL shift and go to state 24
    INFERIEUR_OU_EGAL shift and go to state 25
    SUPERIEUR       shift and go to state 26
    INFERIEUR       shift and go to state 27
    %               shift and go to state 28
    /               shift and go to state 29
    *               shift and go to state 30
    -               shift and go to state 31
    +               shift and go to state 32


state 39

    (12) expr -> expr DIFFERENT expr .
    (10) expr -> expr . OU expr
    (11) expr -> expr . ET expr
    (12) expr -> expr . DIFFERENT expr
    (13) expr -> expr . EGAL expr
    (14) expr -> expr . SUPERIEUR_OU_EGAL expr
    (15) expr -> expr . INFERIEUR_OU_EGAL expr
    (16) expr -> expr . SUPERIEUR expr
    (17) expr -> expr . INFERIEUR expr
    (20) expr -> expr . % expr
    (21) expr -> expr . / expr
    (22) expr -> expr . * expr
    (23) expr -> expr . - expr
    (24) expr -> expr . + expr
    )               reduce using rule 12 (expr -> expr DIFFERENT expr .)
    OU              reduce using rule 12 (expr -> expr DIFFERENT expr .)
    ET              reduce using rule 12 (expr -> expr DIFFERENT expr .)
    DIFFERENT       reduce using rule 12 (expr -> expr DIFFERENT expr .)
    EGAL            reduce using rule 12 (expr -> expr DIFFERENT expr .)
    SUPERIEUR_OU_EGAL reduce using rule 12 (expr -> expr DIFFERENT expr .)
    INFERIEUR_OU_EGAL reduce using rule 12 (expr -> expr DIFFERENT expr .)
    SUPERIEUR       reduce using rule 12 (expr -> expr DIFFERENT expr .)
    INFERIEUR       reduce using rule 12 (expr -> expr DIFFERENT expr .)
    %               shift and go to state 28
    /               shift and go to state 29
    *               shift and go to state 30
    -               shift and go to state 31
    +               shift and go to state 32


state 40
